[added] work-in-progress animation system

--- a/game_frame.html
+++ b/game_frame.html
@@ -45,6 +45,7 @@
 	<script src="./js/chitin/systems/basics.js"></script>
 	<script src="./js/chitin/systems/transform.js"></script>
 	<script src="./js/chitin/systems/sprites.js"></script>
+	<script src="./js/chitin/systems/animation.js"></script>
 	<script src="./js/chitin/systems/tilemap.js"></script>
 	<script src="./js/chitin/systems/physics.js"></script>
 	<!-- game stuff -->
