[added] animation example [modified] started using namespaced systems in examples for easier cleanup and to ensure that system is working properly

--- a/game_frame.html
+++ b/game_frame.html
@@ -51,6 +51,7 @@
 	<!-- game stuff -->
 	<script src="./js/example/main.js"></script>
 	<script src="./js/example/nbody.js"></script>
+	<script src="./js/example/animation.js"></script>
 
 </head>
 <body>
