--- a/game_frame.html
+++ b/game_frame.html
@@ -51,7 +51,7 @@
 	<!-- game stuff -->
 	<script src="./js/example/main.js"></script>
 	<script src="./js/example/nbody.js"></script>
-	<script src="./js/example/animation.js"></script>
+	<script src="./js/example/anim.js"></script>
 
 </head>
 <body>
