[added] functional tilemap collisions and a barebones test state

--- a/game_frame.html
+++ b/game_frame.html
@@ -52,6 +52,7 @@
 	<script src="./js/example/main.js"></script>
 	<script src="./js/example/nbody.js"></script>
 	<script src="./js/example/anim.js"></script>
+	<script src="./js/example/tmc.js"></script>
 
 </head>
 <body>
