--- a/minimal.html
+++ b/minimal.html
@@ -29,7 +29,7 @@
 	<script src="./js/chitin/util/vector.js"></script>
 	<script src="./js/chitin/util/collection.js"></script>
 	<!-- media stuff -->
-	<script src="./js/chitin/media/canvas.js"></script>
+	<script src="./js/chitin/media/render.js"></script>
 	<script src="./js/chitin/media/camera.js"></script>
 	<script src="./js/chitin/media/files.js"></script>
 	<script src="./js/chitin/media/images.js"></script>
